--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ safe: true
 source: https://github.com/creek-service/creek-service.github.io
 incremental: true
 highlighter: rouge
+remote_theme: pages-themes/tactile@v0.2.0
 gist:
   noscript: false
 kramdown:
@@ -10,4 +11,5 @@ kramdown:
   syntax_highlighter: rouge
 
 plugins:
+  - jekyll-remote-theme
   - jekyll-github-metadata
