--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -40,5 +40,6 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
+        if: (github.event_name == 'push' || github.event.inputs.publish == 'true')
         id: deployment
         uses: actions/deploy-pages@v1
