--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
 
   deploy:
+    if: github.event_name == 'push'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -40,6 +41,5 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
-        if: (github.event_name == 'push' || github.event.inputs.publish == 'true')
         id: deployment
         uses: actions/deploy-pages@v1
