--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ source: https://github.com/creek-service/creek-service.github.io
 
 lsi: false
 safe: true
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 highlighter: rouge
 incremental: true
 gist:
