Get it building

--- a/_config.yml
+++ b/_config.yml
@@ -5,27 +5,24 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
-# Theme Settings
-#
-# Review documentation to determine if you should use `theme` or `remote_theme`
-# https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
+# Note: the _config.yml and _data/ files in the theme are not picked up by repos using the theme.
+# Requires: https://github.com/github/pages-gem/pull/855
 
-# theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+# remote_theme           : "creek-service/creek-service.github.io"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Creek Service"
+title                    :
 title_separator          : "-"
-subtitle                 : "Write business logic<br>Mot boilerplate"
-name                     : &name "Creek Service" # &name is a YAML anchor which can be *referenced later
-description              : "Quickly build & test an ecosystem of JVM based microservices, using Kafka clients, Kafka Streams and more."
-url                      : "https://www.creekservice.org" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "creek-service/creek-service.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+subtitle                 :
+name                     : # &name is a YAML anchor which can be *referenced later
+description              : # Used in SEO
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/creek-logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     :  # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -96,7 +93,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google"" # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-CZC5Z8YNH8"
     anonymize_ip         : # true, false (default)
