--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,17 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    :
+title                    : "Creek Service"
 title_separator          : "-"
-subtitle                 :
 name                     : # &name is a YAML anchor which can be *referenced later
 description              : # Used in SEO
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     :  # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+logo                     : "/assets/images/creek-logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title           : "Write business logic" # overrides the website title displayed in the masthead, use " " for no title
+subtitle                 : "Not boilerplate" # custom site tagline that appears below site title in masthead
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
