Add post about first tutorial launched

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ exclude:
 collections:
   docs:
     output: true
-    permalink: /:collection/:path/
+    permalink: /:collection/:path
 
 # Defaults
 defaults:
