QSG->Docs in header + harden wf security

--- a/_data/navigation/main.yml
+++ b/_data/navigation/main.yml
@@ -1,7 +1,7 @@
 # Local copy of the nav set in creek-jekyll-theme
 # Local changes need to be kept in system with creek-jekyll-theme!!!
 
-- title: "Quick-Start Guide"
+- title: "Documentation"
   url: /docs/quick-start-guide/
 - title: "Tutorials"
   url: /tutorials/
