Improve Quick start guide
...a little bit

and add a contributing page

--- a/_data/navigation/docs.yml
+++ b/_data/navigation/docs.yml
@@ -18,10 +18,8 @@
       url: /docs/authoring-test-extensions/
 - title: Meta
   children:
-#    - title: "History"
-#      url: /docs/history/
-#    - title: "Contributing"
-#      url: /docs/contributing/
+    - title: "Contributing"
+      url: /docs/contributing/
     - title: "License"
       url: /docs/license/
     - title: "Terms &amp; Privacy Policy"
