SEO: fix redirects
Some urls used are being redirected as they don't end in a `/`, when they should.

--- a/_data/navigation/docs.yml
+++ b/_data/navigation/docs.yml
@@ -3,11 +3,11 @@
     - title: "Quick-Start Guide"
       url: /docs/quick-start-guide/
     - title: "Aggregate Template"
-      url: /aggregate-template
+      url: /aggregate-template/
 - title: Creek components
   children:
     - title: "Descriptors"
-      url: /docs/descriptors
+      url: /docs/descriptors/
 - title: Extending Creek
   children:
     - title: "Existing extensions"
