Announce ks-aggregate-api tutorial

--- a/_config.yml
+++ b/_config.yml
@@ -90,3 +90,4 @@ repos_with_docs:
   - name: aggregate-template
   - name: basic-kafka-streams-demo
   - name: ks-connected-services-demo
+  - name: ks-aggregate-api-demo
