Include creek-kafka in site index

--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,7 @@ defaults:
 
 # List of other repos with docs to include in the site index:
 repos_with_docs:
+  - name: creek-kafka
   - name: aggregate-template
   - name: basic-kafka-streams-demo
   - name: ks-connected-services-demo
