--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,7 @@ defaults:
       author_profile: true
       read_time: true
       share: true
+      toc_sticky: true
   # _pages
   - scope:
       path: "_pages"
@@ -70,6 +71,7 @@ defaults:
       author_profile: false
       read_time: false
       share: false
+      toc_sticky: true
   # _docs
   - scope:
       path: ""
