Update shared schema post

--- a/_data/navigation/main.yml
+++ b/_data/navigation/main.yml
@@ -7,7 +7,7 @@
   url: /tutorials/
 - title: "Extensions"
   url: /extensions/
-- title: "Announcements"
+- title: "Posts"
   url: /posts/
 - title: "About"
   url: /about/
